# streamlit-gettext

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yml  pypi-deploy.yml  test.yml
api/: index.html
docs/en/: api.md  index.md
docs/ru/: api.md  index.md
example/: README.md  example.py  i18n.py  pyproject.toml
example/locale/: messages.pot
example/locale/ru/LC_MESSAGES/: messages.mo  messages.po
example/locale/uk/LC_MESSAGES/: messages.mo  messages.po
example/tests/: test_example.py
ru/: index.html
ru/api/: index.html
streamlit_gettext/: streamlit_gettext.py
